--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         <div class="flex flex-col md:flex-row items-center">
           <div class="md:w-1/3 mb-8 md:mb-0 flex justify-center">
             <img
-              src="./asset/bang dody.jpg"
+              src="./asset/bang dody 2.jpg"
               alt="About Me"
               class="w-64 h-64 rounded-full object-cover border-4 border-indigo-500 shadow-lg"
             />
@@ -426,34 +426,35 @@
           >
             <div class="h-48 overflow-hidden">
               <img
-                src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80"
+                src=" https://images.unsplash.com/photo-1559028012-481c04fa702d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1136&q=80"
                 alt="Project 1"
                 class="w-full h-full object-cover transition-transform duration-500 hover:scale-110"
               />
             </div>
             <div class="p-6">
-              <h3 class="text-xl font-semibold mb-2">E-commerce Dashboard</h3>
+              <h3 class="text-xl font-semibold mb-2">E-dutech</h3>
               <p class="text-gray-600 dark:text-gray-300 mb-4">
-                A comprehensive dashboard for e-commerce analytics with
-                real-time data visualization.
+                Mengembangkan sebuah aplikasi berbasis web Education Technology,
+                sebagai bagian dari program Magang Studi Independen
+                Bersertifikat di PT Revolusi Cita Edukasi
               </p>
               <div class="flex flex-wrap gap-2 mb-4">
                 <span
                   class="px-3 py-1 bg-indigo-100 dark:bg-indigo-900 text-indigo-800 dark:text-indigo-200 rounded-full text-sm"
-                  >Python</span
+                  >Express.js</span
                 >
                 <span
                   class="px-3 py-1 bg-indigo-100 dark:bg-indigo-900 text-indigo-800 dark:text-indigo-200 rounded-full text-sm"
-                  >Chart.js</span
+                  >JavaScript</span
                 >
                 <span
                   class="px-3 py-1 bg-indigo-100 dark:bg-indigo-900 text-indigo-800 dark:text-indigo-200 rounded-full text-sm"
-                  >TailwindCSS</span
+                  >HTML dan CSS</span
                 >
               </div>
               <div class="flex space-x-3">
                 <a
-                  href="#"
+                  href="https://kampus-merdeka-software-engineering.github.io/FE-Balikpapan-11/"
                   class="text-indigo-600 dark:text-indigo-400 hover:underline"
                   >Live Demo</a
                 >
@@ -472,29 +473,30 @@
           >
             <div class="h-48 overflow-hidden">
               <img
-                src="https://images.unsplash.com/photo-1559028012-481c04fa702d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1136&q=80"
+                src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80"
                 alt="Project 2"
                 class="w-full h-full object-cover transition-transform duration-500 hover:scale-110"
               />
             </div>
             <div class="p-6">
-              <h3 class="text-xl font-semibold mb-2">Task Management App</h3>
+              <h3 class="text-xl font-semibold mb-2">Analisis Data</h3>
               <p class="text-gray-600 dark:text-gray-300 mb-4">
-                A productivity app for teams to collaborate on projects and
-                track progress.
+                Menganalisis data penjualan produk menggunakan Python dan
+                menghasilkan visualisasi yang informatif untuk pengambilan
+                keputusan bisnis.
               </p>
               <div class="flex flex-wrap gap-2 mb-4">
                 <span
                   class="px-3 py-1 bg-indigo-100 dark:bg-indigo-900 text-indigo-800 dark:text-indigo-200 rounded-full text-sm"
-                  >Vue.js</span
+                  >Python</span
                 >
                 <span
                   class="px-3 py-1 bg-indigo-100 dark:bg-indigo-900 text-indigo-800 dark:text-indigo-200 rounded-full text-sm"
-                  >Firebase</span
+                  >Looker Studio</span
                 >
                 <span
                   class="px-3 py-1 bg-indigo-100 dark:bg-indigo-900 text-indigo-800 dark:text-indigo-200 rounded-full text-sm"
-                  >Vuetify</span
+                  >Google Colab</span
                 >
               </div>
               <div class="flex space-x-3">
@@ -518,29 +520,30 @@
           >
             <div class="h-48 overflow-hidden">
               <img
-                src="https://images.unsplash.com/photo-1467232004584-a241de8b3885?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1169&q=80"
+                src="./asset/machine learning.jpg"
                 alt="Project 3"
                 class="w-full h-full object-cover transition-transform duration-500 hover:scale-110"
               />
             </div>
             <div class="p-6">
-              <h3 class="text-xl font-semibold mb-2">Weather Forecast App</h3>
+              <h3 class="text-xl font-semibold mb-2">Machine Learning</h3>
               <p class="text-gray-600 dark:text-gray-300 mb-4">
-                A weather application with 5-day forecasts and location-based
-                services.
+                Membuat sebuah model Machine Learning menggunakan python untuk
+                aplikasi pemantai hari ovulasi pad wanita. dalam projek tugas
+                kelompok di bangkit academy
               </p>
               <div class="flex flex-wrap gap-2 mb-4">
                 <span
                   class="px-3 py-1 bg-indigo-100 dark:bg-indigo-900 text-indigo-800 dark:text-indigo-200 rounded-full text-sm"
-                  >JavaScript</span
+                  >Python</span
                 >
                 <span
                   class="px-3 py-1 bg-indigo-100 dark:bg-indigo-900 text-indigo-800 dark:text-indigo-200 rounded-full text-sm"
-                  >OpenWeather API</span
+                  >Tensorflow</span
                 >
                 <span
                   class="px-3 py-1 bg-indigo-100 dark:bg-indigo-900 text-indigo-800 dark:text-indigo-200 rounded-full text-sm"
-                  >CSS3</span
+                  >NLP</span
                 >
               </div>
               <div class="flex space-x-3">
@@ -587,72 +590,25 @@
               class="flex flex-col md:flex-row md:items-center md:justify-between"
             >
               <div class="mb-4 md:mb-0">
-                <h3 class="text-xl font-semibold">Web Developer Lead</h3>
-                <p class="text-indigo-600 dark:text-indigo-400">
-                  Google Developer Student Clubs
-                </p>
+                <h3 class="text-xl font-semibold">
+                  Ketua Himpunan Mahasiswa Sistem Informasi Universitas Bina
+                  Bangsa
+                </h3>
+                <p class="text-indigo-600 dark:text-indigo-400">HIMASI</p>
               </div>
               <div class="text-gray-500 dark:text-gray-400">
-                <span>2021 - Present</span>
+                <span>2023 - 2024</span>
               </div>
             </div>
             <div class="mt-4">
               <p class="text-gray-600 dark:text-gray-300">
-                Led a team of 10 developers to create web solutions for campus
-                events and competitions. Organized workshops on modern web
-                technologies for 100+ participants.
-              </p>
-            </div>
-          </div>
-
-          <!-- Experience 2 -->
-          <div
-            class="bg-white dark:bg-gray-800 p-6 rounded-xl shadow-md card-hover"
-          >
-            <div
-              class="flex flex-col md:flex-row md:items-center md:justify-between"
-            >
-              <div class="mb-4 md:mb-0">
-                <h3 class="text-xl font-semibold">Technical Mentor</h3>
-                <p class="text-indigo-600 dark:text-indigo-400">
-                  Hacktiv8 Coding Bootcamp
-                </p>
-              </div>
-              <div class="text-gray-500 dark:text-gray-400">
-                <span>2020 - 2021</span>
-              </div>
-            </div>
-            <div class="mt-4">
-              <p class="text-gray-600 dark:text-gray-300">
-                Mentored 50+ students in full-stack web development. Assisted in
-                curriculum development and provided code reviews for student
-                projects.
-              </p>
-            </div>
-          </div>
-
-          <!-- Experience 3 -->
-          <div
-            class="bg-white dark:bg-gray-800 p-6 rounded-xl shadow-md card-hover"
-          >
-            <div
-              class="flex flex-col md:flex-row md:items-center md:justify-between"
-            >
-              <div class="mb-4 md:mb-0">
-                <h3 class="text-xl font-semibold">Volunteer</h3>
-                <p class="text-indigo-600 dark:text-indigo-400">
-                  Tech for Social Good
-                </p>
-              </div>
-              <div class="text-gray-500 dark:text-gray-400">
-                <span>2019 - 2020</span>
-              </div>
-            </div>
-            <div class="mt-4">
-              <p class="text-gray-600 dark:text-gray-300">
-                Developed websites for non-profit organizations. Collaborated
-                with designers and content writers to create impactful digital
-                solutions.
+                Di organisasi saya menjabat sebagai ketua organisasi. Dalam
+                peran ini, saya bertanggung jawab untuk mengatur jadwal rapat,
+                menyusun program kerja, serta memastikan program tersebut
+                dijalankan dengan baik. Saya juga berperan dalam membangun
+                koordinasi dan komunikasi yang efektif antar anggota, sehingga
+                seluruh anggota memiliki tujuan dan arah yang sama dalam
+                menjalankan visi misi organisasi.
               </p>
             </div>
           </div>
